[package]
name = "passable"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pass a pointer around."
homepage = "https://github.com/amjoshuamichael/passable"
repository = "https://github.com/amjoshuamichael/passable"
readme = "README.md"
categories = ["memory-management"]
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]
